--- a/src/main/resources/templates/articleList.html
+++ b/src/main/resources/templates/articleList.html
@@ -1,42 +1,54 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <meta charset="UTF-8">
-    <title>블로그 글 목록</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <title>블로그 글 목록</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
+
 <body>
-<div class="p-5 mb-5 text-center</> bg-light">
+  <div class="p-5 mb-5 text-center</> bg-light">
     <h1 class="mb-3">My Blog</h1>
     <h4 class="mb-3">블로그에 오신 것을 환영합니다.</h4>
-</div>
+  </div>
 
-<div class="container">
-    <button type="button" id="create-btn"
-            th:onclick="|location.href='@{/new-article}'|"
-            class="btn btn-secondary btn-sm mb-3">글 등록</button>
-    <div class="row-6" th:each="item : ${articles}">
-        <div class="card">
-            <div class="card-header" th:text="${item.id}">
-            </div>
-            <div class="card-body">
-                <h5 class="card-title" th:text="${item.title}"></h5>
-                <p class="card-text" th:text="${item.content}"></p>
-                <a th:href="@{/articles/{id}(id=${item.id})}" class="btn btn-primary">보러가기</a>
-            </div>
+  <div class="container">
+    <div class="d-flex bd-highlight mb-3">
+      <button type="button" id="create-btn" th:onclick="|location.href='@{/new-article}'|"
+        class="btn btn-secondary btn-sm mb-3 mr-auto p-2 bd-highlight">✍글 등록</button>
+      <form class="form-inline p-2 bd-highlight" method="GET" th:action="@{/articles}">
+        <div class="form-group mx-sm-3 mb-2">
+          <label for="searchText" class="sr-only">검색</label>
+          <input type="text" class="form-control" id="searchText" name="searchText" th:value="${param.searchText}">
         </div>
-        <br>
+        <button type="submit" class="btn btn-primary mb-2">🔍검색</button>
+      </form>
+    </div>
+
+    <div class="row-6" th:each="item : ${articles}">
+      <div class="card">
+        <div class="card-header" th:text="${item.id}">
+        </div>
+        <div class="card-body">
+          <h5 class="card-title" th:text="${item.title}"></h5>
+          <p class="card-text" th:text="${item.content}"></p>
+          <a th:href="@{/articles/{id}(id=${item.id})}" class="btn btn-primary">보러가기</a>
+        </div>
+      </div>
+      <br>
     </div>
     <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center">
-          <li class="page-item" th:classappend="${1 == articles.pageable.pageNumber + 1} ? 'disabled'">
-            <a class="page-link" href="#" th:href="@{/articles(page=${articles.pageable.pageNumber - 1})}" tabindex="-1">Previous</a>
-          </li>
-          <li class="page-item" th:classappend="${i == articles.pageable.pageNumber + 1} ? 'disabled'" th:each="i : ${#numbers.sequence(startPage, endPage)}">
-            <a class="page-link" href="#" th:href="@{/articles(page=${i - 1})}" th:text="${i}">1</a></li>
+      <ul class="pagination justify-content-center">
+        <li class="page-item" th:classappend="${1 == articles.pageable.pageNumber + 1} ? 'disabled'">
+          <a class="page-link" href="#" th:href="@{/articles(page=${articles.pageable.pageNumber - 1}, searchText=${param.searchText})}" th:if="${articles.totalPages}>1"
+            tabindex="-1">Previous</a>
+        </li>
+        <li class="page-item" th:classappend="${i == articles.pageable.pageNumber + 1} ? 'disabled'" th:each="i : ${#numbers.sequence(startPage, endPage)}" th:if="${articles.totalPages}>1">
+            <a class="page-link" href="#" th:href="@{/articles(page=${i - 1}, searchText=${param.searchText})}" th:text="${i}">1</a></li>
           
           <li class="page-item" th:classappend="${articles.totalPages == articles.pageable.pageNumber + 1} ? 'disabled'">
-            <a class="page-link" href="#" th:href="@{/articles(page=${articles.pageable.pageNumber + 1})}">Next</a>
+            <a class="page-link" href="#" th:href="@{/articles(page=${articles.pageable.pageNumber + 1}, searchText=${param.searchText})}" th:if="${articles.totalPages}>1">Next</a>
           </li>
         </ul>
       </nav>
